# pane-management-v0.4.0

./: .gitignore  CLAUDE.md  SETUP-GUIDE.md  diagnostics.ps1  sync.sh
.claude/rules/: account-key-mirror.md  android-dto-contract.md  commit-style.md  companion-endpoints.md  error-handling-dialects.md  tauri-commands.md  tauri-store-rmw.md  windows-scratch-discipline.md  wsl-networking.md  wsl-process-spawn.md
.claude/skills/companion-smoke-test/: SKILL.md
.claude/skills/diagnostics/: SKILL.md
.claude/skills/phone-deploy/: SKILL.md
.claude/skills/rotate-companion-secrets/: SKILL.md
workspace-resume/: package-lock.json  package.json
workspace-resume/src/: App.tsx  CLAUDE.md  index.css
workspace-resume/src-tauri/: CLAUDE.md  Cargo.toml
workspace-resume/src-tauri/src/: lib.rs
workspace-resume/src-tauri/src/commands/: companion_admin.rs  discovery.rs  git.rs  launcher.rs  mac_sync.rs  mod.rs  project_meta.rs  tmux.rs  usage.rs
workspace-resume/src-tauri/src/companion/: accounts.rs  audit_log.rs  auth.rs  error.rs  hook_sink.rs  http.rs  mod.rs  models.rs  ntfy_server.rs  pane_log.rs  rate_limit_poller.rs  state.rs  tmux_poller.rs  ws.rs
workspace-resume/src-tauri/src/models/: mod.rs  pane_assignment.rs  pane_preset.rs  project.rs  project_meta.rs  settings.rs  tmux_state.rs
workspace-resume/src-tauri/src/services/: git.rs  host_target.rs  launch_cmd.rs  mod.rs  path_decoder.rs  remote_hosts.rs  scanner.rs  ssh_mirror.rs  store.rs  usage.rs  watcher.rs  wsl.rs
workspace-resume/src-tauri/src/services/terminal/: mod.rs  tmux.rs
workspace-resume/src/components/: SettingsPanel.tsx
workspace-resume/src/components/layout/: GlobalActivePanel.tsx  MainArea.tsx  QuickLaunch.tsx  Sidebar.tsx  TopBar.tsx
workspace-resume/src/components/pane/: CreatePaneModal.tsx  PaneGrid.tsx  PanePresetPicker.tsx  PaneSlot.tsx
workspace-resume/src/components/project/: NewProjectFlow.tsx  ProjectCard.tsx  ProjectDetailModal.tsx
workspace-resume/src/components/ui/: AccountBadge.tsx  Badge.tsx  Button.tsx  Card.tsx  Skeleton.tsx  StatusChip.tsx  StatusOrb.tsx  Toast.tsx  icons.ts
workspace-resume/src/contexts/: AppContext.tsx
workspace-resume/src/lib/: account.ts  companion-events.ts  launch.ts  path.ts  store-keys.ts  tauri-commands.ts  types.ts
