[package]
name = "workspace-resume"
version = "0.4.0"
description = "A Tauri app for resuming Claude Code sessions"
authors = ["andreacanes"]
edition = "2021"

[lib]
name = "workspace_resume_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
rev_lines = "0.3"
dirs = "5"
tokio = { version = "1", features = ["full"] }
open = "5"
serde_yaml = "0.9"
urlencoding = "2"

# Companion service (HTTP/WS API for Android mobile app over Tailscale)
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
thiserror = "2"
subtle = "2"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
avt = "0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"

[features]
# Enables tauri's `custom-protocol` — release builds serve the webview from
# the embedded `frontendDist` bundle instead of the `devUrl` Vite server.
# Without this feature, `cargo build --release` produces an exe whose
# webview tries `http://localhost:1420` and fails with "refused to connect"
# because no Vite dev server is running. `cargo tauri build` enables this
# automatically; for plain `cargo build --release` pass `--features custom-protocol`.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
